--- a/package.json
+++ b/package.json
@@ -15,18 +15,9 @@
     "heroku-postbuild": "npm run install-client && npm run build"
   },
   "dependencies": {
-    "@apollo/server": "^4.10.0",
-    "apollo-server-express": "^3.13.0",
-    "bcryptjs": "^2.4.3",
     "concurrently": "^8.2.2",
-    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "graphql": "^16.8.1",
-    "graphql-tag": "^2.12.6",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.3",
-    "python-shell": "^5.0.0"
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
