--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "heroku-postbuild": "npm run install-client && npm run build"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.0",
+    "apollo-server-express": "^3.13.0",
     "concurrently": "^8.2.2",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "graphql": "^16.8.1",
+    "mongoose": "^8.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
