--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: mediaconverter
     env: node
-    buildCommand: apt-get update && apt-get install -y python3 python3-pip ffmpeg && pip install -r python/requirements.txt && mkdir -p python/downloads && npm install && npm run install-server && npm run install-client && npm run build
+    buildCommand: apt-get update && apt-get install -y python3 python3-pip ffmpeg && pip install -r python/requirements.txt && mkdir -p python/downloads && npm install && npm run install-server && npm run install-client && npm run build && ls -la frontend/build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
