--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "install-server": "cd server && npm install",
     "install-client": "cd frontend && npm install",
     "install-all": "npm install && npm run install-server && npm run install-client",
-    "build": "cd frontend && npm run build && ls -la frontend/build",
+    "build": "cd frontend && npm run build && cp -r dist/* . && cp index.html ../index.html",
     "heroku-postbuild": "npm run install-client && npm run build"
   },
   "dependencies": {
